--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <header class="primary-header">
 
-      <h1 class="main-heading">Welcome To Ampli Town</h1>
+      <h1 class="main-heading">Welcome To Ampli Town vasya!</h1>
 
       <img class="town-preview" src="https://res.cloudinary.com/dnna0ynnm/image/upload/v1537983906/townheader.svg" />
 
